# bitloop-gallery

./: .bitloop-workspace  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  VSWorkspaceSettings.json  vcpkg-configuration.json  vcpkg.json
cmake/toolchain/: vcpkg_autodetect.cmake
tooling/cmake/toolchain/: discovery_toolchain.cmake  vcpkg_autodetect.cmake
tooling/scripts/: update_bitloop_recursive.py
